# server-sdk-py

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: check.yml  docs.yml  release.yml
Errors/: index.html
PortOneApi/: index.html
Schemas/: index.html
Webhook/: index.html
docs/: Errors.md  PortOneApi.md  Webhook.md  index.md  schemas.md
patches/: 0001-refine-return-types.patch  0002-init-docs.patch  0002-use-internal-storeId.patch  0003-init-docs.patch
portone_server_sdk/: __init__.py  _api.py  _async.py  _error_imports.py  _errors.py  _sync.py  a_sync.py  sync.py  webhook.py
scripts/: env.py  gen-env.py  init.py  patch.py  rebuild-schema.py  schema.py  typed.py
search/: search_index.json
src/portone_server_sdk/: __init__.py  _async.py  _client.py  _errors.py  _sync.py  a_sync.py  errors.py  schemas.py  sync.py
