[project]
name = "portone-server-sdk"
version = "0.1.0a2"
description = "PortOne Python SDK for server-side usage"
authors = [
    { name = "portone", email = "tech.support@portone.io" },
    { name = "kiwiyou", email = "kiwiyou@portone.io" },
]
dependencies = ["httpx>=0.27.0", "pyserde>=0.20.0"]
readme = "README.md"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
artifacts = [
    "/src/portone_server_sdk/_generated",
    "/src/portone_server_sdk/_openapi",
]
exclude = ["/openapi"]

[tool.hatch.build.targets.wheel]
artifacts = [
    "/src/portone_server_sdk/_generated",
    "/src/portone_server_sdk/_openapi",
]

[tool.pyright]
include = ["src", "scripts"]
venvPath = "."
venv = ".venv"

[tool.ruff]
include = [
    "pyproject.toml",
    "src/portone_server_sdk/**/*.py",
    "scripts/**/*.py",
]
exclude = ["openapi", "src/portone_server_sdk/_openapi/**/*.py"]

[tool.uv]
dev-dependencies = [
    "toml>=0.10.2",
    "fire>=0.6.0",
    "markdownify>=0.13.1",
    "types-toml>=0.10.8.20240310",
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.2",
    "mkdocs-material>=9.5.33",
    "pyright>=1.1.377",
    "ruff>=0.6.2",
    "pre-commit>=3.8.0",
]
